[package]
name = "protonpics"
version = "0.1.3"
edition = "2024"
authors = ["Sabri Haddouche <pwnsdx@protonmail.ch>"]
description = "Experimental one-way exporter for Proton Photos"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["proton", "photos", "backup", "export", "cli"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
aes-gcm-siv = "0.11.1"
anyhow = "1.0.100"
argon2 = "0.5.3"
base64 = "0.22.1"
bcrypt = "0.17.1"
clap = { version = "4.5.38", features = ["derive", "env"] }
ctrlc = "3.5.0"
dialoguer = "0.11.0"
dirs = "6.0.0"
filetime = "0.2.26"
indicatif = "0.18.0"
libc = "0.2.177"
num-bigint-dig = "0.8.6"
num-traits = "0.2.19"
pgp = "0.19.0"
rand = "0.8.5"
rayon = "1.11.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "cookies", "json", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = "3.23.0"
walkdir = "2.5.0"

[dev-dependencies]
smallvec = "1.15.1"
